🎨Fix iphone date input placeholder text not showing

--- a/css/master.css
+++ b/css/master.css
@@ -103,12 +103,6 @@ main {
 	bottom: 4px;
 	opacity: 0.9;
 }
-.warning {
-	font-weight: 500;
-	display: none;
-	text-align: center;
-	color: rgb(243, 77, 77);
-}
 
 
 .blue {
@@ -147,8 +141,6 @@ form {
 	justify-content: space-between;
 }
 input {
-	-webkit-appearance: none;
-	-moz-appearance: none;
 	box-sizing: border-box;
 	border: 1px solid #1d1d1d;
 	border-radius: 2px;
@@ -163,11 +155,6 @@ input {
 	/* text-align: center !important; */
 }
 
-input:invalid {
-	background-color: rgba(255, 45, 45, 0.1);
-	border-color: rgb(243, 77, 77);
-	border-width: 2px;
-}
 input:focus {
 	border: 2px solid #1d1d1d;
 }
